Commit modificação no security e tokenservice